syntax = "proto3";

package weather;
option go_package = "grpc/weather;weather";

service WeatherService {
  rpc GetForecast (ForecastRequest) returns (stream ForecastReply);
}

message ForecastRequest {
  string city = 1;
}

message ForecastReply {
  string day = 1;
  string description = 2;
  float temperature = 3;
}
